issue #206 update info btn aligned

--- a/wp-content/themes/minyawns/less/main.less
+++ b/wp-content/themes/minyawns/less/main.less
@@ -1705,6 +1705,7 @@ background: #F8F8F8!important;
 				.tagsinput {
 					width: 60%;
 					margin-bottom: 1px;
+					max-height: 64px;
 				}
 			}
 }
@@ -8360,4 +8361,10 @@ a{
   	  	    display: table-cell;
   			vertical-align: middle;
   	  }
+}
+#introprofilevidwrap{
+	#introvideowrap{
+		height: auto;
+		max-height: 150px;
+	}
 }
